<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.BSISj7</groupId>
  <artifactId>AppointmentManager</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>Archetype - Appointment Manager</name>
  <url>http://maven.apache.org</url>


  <pluginRepositories>
    <pluginRepository>
      <id>jpro - sandec repository</id>
      <url>https://sandec.jfrog.io/artifactory/repo</url>
    </pluginRepository>
  </pluginRepositories>

  <repositories>
    <repository>
      <id>Sandec</id>
      <name>Sandec Repository</name>
      <url>https://sandec.jfrog.io/artifactory/repo/</url>
    </repository>

    <repository>
      <id>mysql</id>
      <name>Sandec Repository</name>
      <url>https://sandec.jfrog.io/artifactory/repo/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>21-ea+24</version>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-swing</artifactId>
      <version>21-ea+24</version>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-base</artifactId>
      <version>21-ea+24</version>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-media</artifactId>
      <version>21-ea+24</version>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-web</artifactId>
      <version>21-ea+24</version>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>21-ea+24</version>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-graphics</artifactId>
      <version>21-ea+24</version>
    </dependency>

    <dependency>
      <groupId>com.sandec.jpro</groupId>
      <artifactId>jpro-webapi</artifactId>
      <version>2023.3.0-M3</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>one.jpro.platform</groupId>
      <artifactId>jpro-image-manager</artifactId>
      <version>0.2.7-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>one.jpro.platform</groupId>
      <artifactId>jpro-media</artifactId>
      <version>0.2.7-SNAPSHOT</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>main.java.Main</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <configuration>
          <mainClass>main.java.Main</mainClass>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>21</source>
          <target>21</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>one.jpro</groupId>
        <artifactId>jpro-maven-plugin</artifactId>
        <version>2023.3.1</version>
        <configuration>
          <JVMArgs>
            <JVMArg>--enable-preview</JVMArg>
          </JVMArgs>
          <mainClassName>TestCreator.Main</mainClassName>
          <openingPath>/</openingPath>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
